# platformer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: build_and_test.yml
assets/: game_data.json  player_data.json
assets/levels/: level1.json  level2.json  level3.json  level4.json  level5.json
assets/scripts/: game_logic.lua
assets/shaders/: sprite.fs  sprite.vs  transition.fs
assets/tile_maps/: level1.json  level2.json  level3.json  level4.json  level5.json  new_level.json
include/: sprite_renderer.hpp  texture2d.hpp  tile_map_renderer.hpp
include/agent/: agent.hpp  agent_data.hpp  agent_state.hpp
include/agent/movement_abilities/: action_buffer.hpp  climb_ability.hpp  climb_move_ability.hpp  climb_move_ability_data.hpp  coyote_time.hpp  dash_ability.hpp  dash_ability_data.hpp  direction_buffer.hpp  gravity_ability.hpp  gravity_ability_data.hpp  jump_ability.hpp  jump_ability_data.hpp  move_ability.hpp  move_ability_data.hpp  movement_ability.hpp  movement_system.hpp  wall_jump_ability.hpp  wall_jump_ability_data.hpp  wall_slide_ability.hpp  wall_slide_ability_data.hpp
include/animations/: animation_manager.hpp  frame_animation.hpp  frame_animation_data.hpp  sprite_animation.hpp  sprite_animation_data.hpp  tile_animation.hpp  tile_animation_data.hpp
include/cameras/: camera2d.hpp  camera2d_data.hpp  camera_shake.hpp
include/game/: camera2d.hpp  camera2d_data.hpp  debug_data.hpp  fixed_time_step.hpp  frame_animation.hpp  game.hpp  game_data.hpp  player.hpp  player_animation_state.hpp  player_data.hpp  scoring_system.hpp  sprite_animation.hpp  tile.hpp  tile_data.hpp  tile_definition.hpp  tile_kind.hpp  tile_map.hpp  tile_map_data.hpp  tile_type.hpp
include/game/player/: movement_context.hpp  player.hpp  player_animation_state.hpp  player_data.hpp  player_state.hpp
include/game/player/movement_abilities/: action_buffer.hpp  climb_ability.hpp  climb_ability_data.hpp  climb_move_ability.hpp  coyote_time.hpp  dash_ability.hpp  dash_ability_data.hpp  direction_buffer.hpp  jump_ability.hpp  jump_ability_data.hpp  move_ability.hpp  move_ability_data.hpp  movement_ability.hpp  movement_context.hpp  movement_system.hpp  wall_jump_ability.hpp  wall_jump_ability_data.hpp  wall_slide_ability.hpp  wall_slide_ability_data.hpp
include/game/tile_map/: tile.hpp  tile_data.hpp  tile_interaction_system.hpp  tile_kind.hpp  tile_map.hpp  tile_map_data.hpp
include/glad/: glad.h
include/input/: input_intentions.hpp  input_manager.hpp  keyboard_manager.hpp
include/navigation/: navigation_edge.hpp  navigation_graph.hpp  navigation_node.hpp
include/physics/: aabb.hpp  physics_body.hpp  physics_body_data.hpp  physics_data.hpp
include/reloading/: asset_watcher.hpp  file_watcher.hpp  file_watcher_listenener.hpp  game_data_watcher.hpp  level_watcher.hpp  script_watcher.hpp
include/rendering/: debug_renderer.hpp  debug_renderer_data.hpp  screen_transition.hpp  shader.hpp  shader_data.hpp  sprite_renderer.hpp  texture2d.hpp  tile_map_renderer.hpp
include/rendering/ui/: debug_aabb_ui.hpp  debug_control_ui.hpp  debug_navigation_ui.hpp  debug_tile_map_ui.hpp  debug_ui.hpp  editor_tile_map_ui.hpp  imgui_manager.hpp  score_ui.hpp
include/scripting/: lua_script_system.hpp
include/serialization/: glm_ivec2_meta.hpp  glm_vec2_meta.hpp
shaders/: tile_set.vs
src/: glad.c  main.cpp  shader.cpp  sprite_renderer.cpp  texture2d.cpp  tile_map.cpp  tile_map_renderer.cpp
src/agent/: agent.cpp
src/agent/movement_abilities/: climb_ability.cpp  climb_move_ability.cpp  dash_ability.cpp  gravity_ability.cpp  jump_ability.cpp  move_ability.cpp  movement_system.cpp  wall_jump_ability.cpp  wall_slide_ability.cpp
src/animations/: animation_manager.cpp  frame_animation.cpp  sprite_animation.cpp  tile_animation.cpp
src/cameras/: camera2d.cpp
src/game/: camera2d.cpp  fixed_time_step.cpp  frame_animation.cpp  game.cpp  player.cpp  scoring_system.cpp  sprite_animation.cpp  tile.cpp  tile_map.cpp
src/game/player/: player.cpp
src/game/player/movement_abilities/: climb_ability.cpp  climb_move_ability.cpp  dash_ability.cpp  (+5 more)
src/game/tile_map/: tile.cpp  tile_interaction_system.cpp  tile_map.cpp
src/input/: input_manager.cpp  keyboard_manager.cpp
src/navigation/: navigation_graph.cpp
src/physics/: fixed_time_step.cpp  physics_body.cpp
src/rendering/: debug_renderer.cpp  screen_transition.cpp  shader.cpp  sprite_renderer.cpp  texture2d.cpp  tile_map_renderer.cpp
src/rendering/ui/: debug_aabb_ui.cpp  debug_control_ui.cpp  debug_navigation_ui.cpp  debug_tile_map_ui.cpp  debug_ui.cpp  editor_tile_map_ui.cpp  imgui_manager.cpp  score_ui.cpp
src/scripting/: lua_script_system.cpp
tests/: test_camera2d.cpp  test_frame_animation.cpp  test_main.cpp  test_player.cpp  test_shader.cpp  test_sprite_animation.cpp  test_stub.cpp  test_texture2d.cpp  test_tile_map.cpp
tests/agent/movement_abilities/: test_action_buffer.cpp  test_climb_ability.cpp  test_climb_move_ability.cpp  test_coyote_time.cpp  test_dash_ability.cpp  test_direction_buffer.cpp  test_gravity_ability.cpp  test_jump_ability.cpp  test_move_ability.cpp  test_movement_system.cpp  test_wall_jump_ability.cpp  test_wall_slide_ability.cpp
tests/animations/: test_frame_animation.cpp  test_sprite_animation.cpp  test_tile_animation.cpp
tests/cameras/: test_camera2d.cpp
tests/game/: test_camera2d.cpp  test_fixed_time_step.cpp  test_player.cpp  test_tile.cpp  test_tile_map.cpp
tests/game/player/: test_player.cpp
tests/game/tile_map/: test_tile.cpp  test_tile_interaction_system.cpp  test_tile_map.cpp
tests/input/: test_keyboard_manager.cpp
tests/navigation/: test_navigation_graph.cpp
tests/physics/: test_fixed_time_step.cpp  tests_aabb.cpp  tests_physics_body.cpp
tests/rendering/: test_shader.cpp  test_texture2d.cpp
tests/scripting/: test_lua_script_system.cpp
tests/test_helpers/: gl_context.cpp  gl_context.hpp  mock_player.hpp  test_player_utils.hpp  test_tile_map_utils.hpp  test_tilemap_utils.hpp
tile_maps/: level1.json
tools/: sync_tile_data.py
(+11 files in other folders)
